fix issue with loading in help.txt in Commander